[project]
name = "pgxm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ali Tavallaie", email = "a.tavallaie@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "docker>=7.1.0",
]

[project.scripts]
pgxm = "pgxm.cli:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
